<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sirding</groupId>
	<artifactId>java-sm</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>java-sm Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<description>
	  	整合框架
	  		Spring4+,
	  		Spring security 4+, 
	  		oauth2.0+, 
	  		Mybatis 3.3+, 
	  		freemarker2.3+
	  	MQ
	  		rocketMq or activeMq
	  	cache
	  		memcache or redis or ehcache
  	</description>

	<properties>
		<spring.version>4.3.2.RELEASE</spring.version>
		<spring.security.version>4.0.3.RELEASE</spring.security.version>
		<spring.oauth2.version>2.0.8.RELEASE</spring.oauth2.version>
		<mybatis.version>3.4.1</mybatis.version>
		<mybatis.generator>1.3.5</mybatis.generator>
		<mybatis.spring.version>1.3.0</mybatis.spring.version>
		<hibernate.version>5.2.2.Final</hibernate.version>
		<mysql.version>5.1.35</mysql.version>
		<shiro.version>1.3.2</shiro.version>
	</properties>

	<repositories>
		<repository>
			<id>myNexus.release</id>
			<name>myNexus.release</name>
			<releases>
				<enabled>true</enabled>
			</releases>
			<url>http://119.253.134.199:8097/nexus/content/repositories/releases</url>
		</repository>

		<repository>
			<id>myNexus.snapshots</id>
			<name>myNexus.snapshots</name>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>http://119.253.134.199:8097/nexus/content/repositories/snapshots</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- jstl -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.2.1-b03</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>


		<!-- Spring start -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- 加载注解 -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- Sring end -->

		<!-- Spring security start -->
		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-core</artifactId>
		    <version>${spring.security.version}</version>
		</dependency>
		
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-web</artifactId>  
		    <version>${spring.security.version}</version>  
		</dependency>  
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-taglibs</artifactId>  
		    <version>${spring.security.version}</version>  
		</dependency>  
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-acl</artifactId>  
		    <version>${spring.security.version}</version>  
		</dependency>  
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-crypto</artifactId>  
		    <version>${spring.security.version}</version>  
		</dependency>  
		<dependency>  
		    <groupId>org.springframework.security</groupId>  
		    <artifactId>spring-security-config</artifactId>  
		    <version>${spring.security.version}</version>  
		</dependency> 
		
		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
		<dependency>
		    <groupId>org.springframework.security.oauth</groupId>
		    <artifactId>spring-security-oauth2</artifactId>
		    <version>${spring.oauth2.version}</version>
		</dependency>
		
		<!-- Spring security end -->
		
		
		<!-- shiro security start -->
		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-core -->
		<dependency>
		    <groupId>org.apache.shiro</groupId>
		    <artifactId>shiro-core</artifactId>
		    <version>${shiro.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
		<dependency>
		    <groupId>org.apache.shiro</groupId>
		    <artifactId>shiro-spring</artifactId>
		    <version>${shiro.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
		<dependency>
		    <groupId>org.apache.shiro</groupId>
		    <artifactId>shiro-web</artifactId>
		    <version>${shiro.version}</version>
		</dependency>
		
		<!-- shiro security end -->
		


		<!-- hibernate start -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- hibernate end -->

		<!-- mybatis start -->
		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>${mybatis.spring.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>${mybatis.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
		<dependency>
			<groupId>org.mybatis.generator</groupId>
			<artifactId>mybatis-generator-core</artifactId>
			<version>${mybatis.generator}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
		<!-- mybatis 通用分页 -->
		<dependency>
			<groupId>com.github.pagehelper</groupId>
			<artifactId>pagehelper</artifactId>
			<version>4.1.6</version>
		</dependency>
		<!-- mybatis end -->

		<!-- alibaba start -->
		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.25</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.17</version>
		</dependency>
		<!-- alibaba end -->

		<!-- 数据库 start -->
		<!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
			<version>5.1.21</version> </dependency> -->
		<!-- sql server数据库驱动 -->
		<!-- <dependency> <groupId>net.sourceforge.jtds</groupId> <artifactId>jtds</artifactId> 
			<version>1.2.4</version> </dependency> -->
		<!-- oracle数据库驱动 <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc14</artifactId> 
			<version>10.2.0.1.0</version> </dependency> -->
		<!-- druid -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>
		<!-- 数据库 end -->

		<!-- RSA 加密包 -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk16</artifactId>
			<version>1.46</version>
		</dependency>
		
		
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.3.1</version>
		</dependency>
		
		<!-- json -->
		<dependency>
		    <groupId>net.sf.json-lib</groupId>
		    <artifactId>json-lib</artifactId>
		    <version>2.4</version>
		    <classifier>jdk15</classifier>
		</dependency>
		
	</dependencies>

	<build>
		<finalName>java-sm</finalName>
		<plugins>
			<plugin>
				<groupId>org.mybatis.generator</groupId>
				<artifactId>mybatis-generator-maven-plugin</artifactId>
				<version>1.3.5</version>
				<configuration>
					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
					<verbose>true</verbose>
					<overwrite>true</overwrite>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.mybatis.generator</groupId>
						<artifactId>mybatis-generator-core</artifactId>
						<version>${mybatis.generator}</version>
					</dependency>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>${mysql.version}</version>
					</dependency>
				</dependencies>
				<!-- 将执行mvn mybatis-generator:generate的操作绑定到 complie操作之前，保证每次complie是都重新生成pojo及xml -->
				<!-- <executions> <execution> <id>Generate MyBatis Artifacts</id> <goals> 
					<goal>generate</goal> </goals> </execution> </executions> -->
			</plugin>

			<!-- 解决[Dynamic Web Module 3.0 requires Java 1.6 or newer]问题 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
